fixed header__border with on mobile

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -20,3 +20,9 @@
   margin-left: 20px;
   margin-right: 20px;
 }
+
+@media screen and (max-width: 760px) {
+  .page__content {
+    margin: 0;
+  }
+}
